traefik/tls/dashboard/traefik-middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: traefik-dashboard-basicauth
  namespace: traefik-ingress
spec:
  basicAuth:
    secret: traefik-dashboard-auth
